--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,6 +2,7 @@
   --color-dark: #222222;
   --color-blue: #3199dc;
   --color-light: #f8f9fa;
+  --color-white: #fff;
 
   --spacing-small: 10px;
   --spacing-medium: 15px;
